# django-helusers

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  pytest.ini  release-howto.md  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-test.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  release-please.yml  release.yml  staging.yml  test.yml
helusers/: __init__.py  _oidc_auth_impl.py  _rest_framework_jwt_impl.py  adapter.py  admin.py  admin_site.py  apps.py  auth.py  authz.py  context_processors.py  defaults.py  jwt.py  models.py  oidc.py  permissions.py  pipeline.py  sessions.py  settings.py  tunnistamo_oidc.py  urls.py  user_utils.py  utils.py  views.py
helusers/apps/: __init__.py  admin.py
helusers/locale/fi/LC_MESSAGES/: django.po
helusers/management/commands/: sync_helusers.py
helusers/migrations/: 0001_add_ad_groups.py  0002_add_oidcbackchannellogoutevent.py
helusers/providers/helsinki/: provider.py  urls.py  views.py
helusers/providers/helsinki_oidc/: provider.py  urls.py  views.py
helusers/providers/yletunnus/: provider.py  views.py
helusers/static/helusers/css/: default.css  default_production.css  grappelli.css  grappelli_production.css  helusers.css  password_login_disabled.css
helusers/templates/admin/: base_site.html  base_site_default.html  base_site_grappelli.html  hel_login.html
helusers/tests/: conftest.py  keys.py  settings.py  test_admin.py  test_auth.py  test_authz.py  test_back_channel_logout.py  test_jwt_token_authentication.py  test_migrate_user.py  test_models.py  test_oidc_api_token_authentication.py  test_oidc_oidc_config.py  test_oidc_request_jwt_authentication.py  test_sessions.py  test_settings.py  test_user_utils.py  test_utils.py  urls.py
tamusers/: __init__.py  adapter.py  admin.py  apps.py  jwt.py  settings.py  user_utils.py
tamusers/management/commands/: sync_tamusers.py
tamusers/migrations/: 0001_add_ad_groups.py
tamusers/providers/tampere/: provider.py  urls.py  views.py
tamusers/providers/tampere_oidc/: provider.py  urls.py  views.py
tamusers/templates/admin/: tam_login.html
