[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-helusers"
version = "1.1.0"
authors = [
    { name = "City of Helsinki", email = "dev@hel.fi" }
]
description = "Django app for the user infrastructure of the City of Helsinki"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD License" }
keywords = ["django", "helsinki", "authentication"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=5.2",
    "cachetools>=3.0.0",
    "deprecation>=2",
    "requests",
    "python-jose",
]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-helusers"
Repository = "https://github.com/City-of-Helsinki/django-helusers"
Issues = "https://github.com/City-of-Helsinki/django-helusers/issues"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "helusers.tests.settings"

[tool.coverage.run]
source = ["helusers"]
omit = ["**/migrations/*"]
relative_files = true
branch = true

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "coverage",
    "responses",
    "django-allauth",
    "djangorestframework",
    "social-auth-app-django",
]
all = ["django-helusers[test]"]


[tool.hatch.build.targets.wheel]
packages = ["helusers"]
exclude = ["helusers/tests"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/helusers/tests",
]

[tool.hatch.envs.default]
dependencies = [
    "django~=5.2",
    "pre-commit",
    "coverage",
]
python = "3.14"

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = [
    "pre-commit install",
    "pre-commit run -a",
]
manage = "python manage.py {args}"

[tool.hatch.envs.hatch-test]
default-args = ["helusers/tests"]
dependencies = [
    "django-allauth",
    "djangorestframework",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "coverage",
    "pytest-mock",
    "responses",
    "social-auth-app-django",
]
matrix-name-format = "dj{value}"
parallel = false
randomize = true

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "pytest{env:HATCH_TEST_ARGS:} {args}",
]
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.hatch.envs.hatch-uv]
dependencies = [
  "uv>=0.11.1",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
django = ["5.2"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]
django = ["6.0"]

[tool.uv]
exclude-newer = "14 days"
